# staccontainers

./: .pre-commit-config.yaml  pyproject.toml  staccontainers.py  test_staccontainers.py
docs/source/: conf.py  index.md
staccontainers/: __init__.py  _dask_geopandas.py  _geopandas.py  _utils.py  _xarray.py
tests/: test_to_geopandas.py
