[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "staccontainers"
authors = [{name = "Tom Augspurger", email = "taugspurger@microsoft.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/TomAugspurger/staccontainers"

dependencies = [
    "pystac",
    "pystac-client",
    "requests"
]
requires-python = ">=3.6"

[project.optional-dependencies]
complete = [
    "dask-geopandas",
    "dask[complete]",
    "geopandas",
    "pandas",
    "planetary-computer",
    "stackstac",
    "odc-stac",
    "xarray",
]
